@@ -353,7 +353,7 @@ public class HRegion implements HConstants {
    * @throws IOException
    */
   public List<HStoreFile> close() throws IOException {
-    return close(false);
+    return close(false, null);
   }
   
   /**
@@ -364,13 +364,15 @@ public class HRegion implements HConstants {
    * time-sensitive thread.
    * 
    * @param abort true if server is aborting (only during testing)
+   * @param listener call back to alert caller on close status
    * @return Vector of all the storage files that the HRegion's component 
    * HStores make use of.  It's a list of HStoreFile objects.  Can be null if
    * we are not to close at this time or we are already closed.
    * 
    * @throws IOException
    */
-  List<HStoreFile> close(boolean abort) throws IOException {
+  List<HStoreFile> close(boolean abort,
+      final RegionUnavailableListener listener) throws IOException {
     if (isClosed()) {
       LOG.info("region " + this.regionInfo.getRegionName() + " already closed");
       return null;
@@ -410,6 +412,13 @@ public class HRegion implements HConstants {
         // outstanding updates.
         waitOnRowLocks();
 
+        if (listener != null) {
+          // If there is a listener, let them know that we have now
+          // acquired all the necessary locks and are starting to
+          // do the close
+          listener.closing(getRegionName());
+        }
+        
         // Don't flush the cache if we are aborting
         if (!abort) {
           internalFlushcache(snapshotMemcaches());
@@ -420,6 +429,13 @@ public class HRegion implements HConstants {
           result.addAll(store.close());
         }
         this.closed.set(true);
+        
+        if (listener != null) {
+          // If there is a listener, tell them that the region is now 
+          // closed.
+          listener.closed(getRegionName());
+        }
+        
         LOG.info("closed " + this.regionInfo.getRegionName());
         return result;
       } finally {
@@ -553,17 +569,10 @@ public class HRegion implements HConstants {
         throw new IOException("Cannot split; target file collision at " + dirB);
       }
 
-      // Notify the caller that we are about to close the region. This moves
-      // us to the 'retiring' queue. Means no more updates coming in -- just
-      // whatever is outstanding.
-      if (listener != null) {
-        listener.closing(getRegionName());
-      }
-
       // Now close the HRegion.  Close returns all store files or null if not
       // supposed to close (? What to do in this case? Implement abort of close?)
       // Close also does wait on outstanding rows and calls a flush just-in-case.
-      List<HStoreFile> hstoreFilesToSplit = close();
+      List<HStoreFile> hstoreFilesToSplit = close(false, listener);
       if (hstoreFilesToSplit == null) {
         LOG.warn("Close came back null (Implement abort of close?)");
         throw new RuntimeException("close returned empty vector of HStoreFiles");
