@@ -118,6 +118,9 @@ Trunk (unreleased changes)
    HADOOP-2530 Missing type in new hbase custom RPC serializer
    HADOOP-2490 Failure in nightly #346 (Added debugging of hudson failures).
    HADOOP-2558 fixes for build up on hudson (part 1, part 2, part 3, part 4)
+   HADOOP-2500 Unreadable region kills region servers
+   HADOOP-2587 Splits blocked by compactions cause region to be offline for
+               duration of compaction. 
    
   IMPROVEMENTS
    HADOOP-2401 Add convenience put method that takes writable
